Feat 2.0.0 rc1 update (#254)
Co-authored-by: guanxu <1510424541@qq.com>