@@ -16,16 +16,16 @@
 package com.alibaba.cloud.ai.dashscope.chat;
 
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
-import com.alibaba.cloud.ai.dashscope.api.DashScopeResponseFormat;
-import com.alibaba.cloud.ai.dashscope.spec.DashScopeApiSpec;
+import com.alibaba.cloud.ai.dashscope.chat.DashScopeChatApiSpec.ChatCompletionRequest.Parameters.Function;
+import com.alibaba.cloud.ai.dashscope.chat.DashScopeChatApiSpec.ChatCompletionRequest.Parameters.ResponseFormat;
+import com.alibaba.cloud.ai.dashscope.chat.DashScopeChatApiSpec.ChatCompletionRequest.Parameters.ResponseFormat.Type;
+import com.alibaba.cloud.ai.dashscope.chat.DashScopeChatApiSpec.ChatCompletionRequest.Parameters.Tool;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import org.springframework.ai.chat.prompt.ChatOptions;
 import org.springframework.ai.tool.ToolCallback;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -54,8 +54,6 @@ class DashScopeChatOptionsTests {
 
     private static final Integer TEST_THINKING_BUDGET = 1000;
 
-    private static final Map<String, Object> TEST_EXTRA_BODY = Map.of("customKey", "customValue");
-
     @Test
     void testBuilderAndGetters() {
         // Test building DashScopeChatOptions using builder pattern and verify getters
@@ -74,7 +72,6 @@ class DashScopeChatOptionsTests {
                 .enableThinking(true)
                 .thinkingBudget(TEST_THINKING_BUDGET)
                 .multiModel(true)
-                .extraBody(TEST_EXTRA_BODY)
                 .build();
 
         // Verify all fields are set correctly
@@ -92,7 +89,32 @@ class DashScopeChatOptionsTests {
         assertThat(options.getEnableThinking()).isTrue();
         assertThat(options.getThinkingBudget()).isEqualTo(TEST_THINKING_BUDGET);
         assertThat(options.getMultiModel()).isTrue();
-        assertThat(options.getExtraBody()).isEqualTo(TEST_EXTRA_BODY);
+    }
+
+    @Test
+    void testMaxTokensMapsToMaxCompletionTokens() {
+        DashScopeChatOptions options = DashScopeChatOptions.builder().maxTokens(100).build();
+
+        assertThat(options.getMaxTokens()).isEqualTo(100);
+        assertThat(options.getMaxCompletionTokens()).isEqualTo(100);
+    }
+
+    @Test
+    void testMaxCompletionTokensBacksMaxTokens() {
+        DashScopeChatOptions options = DashScopeChatOptions.builder().maxCompletionTokens(200).build();
+
+        assertThat(options.getMaxTokens()).isEqualTo(200);
+        assertThat(options.getMaxCompletionTokens()).isEqualTo(200);
+    }
+
+    @Test
+    void testCombineWithGenericMaxTokensMapsToMaxCompletionTokens() {
+        DashScopeChatOptions options = DashScopeChatOptions.builder()
+                .combineWith(ChatOptions.builder().maxTokens(300))
+                .build();
+
+        assertThat(options.getMaxTokens()).isEqualTo(300);
+        assertThat(options.getMaxCompletionTokens()).isEqualTo(300);
     }
 
     @Test
@@ -102,23 +124,23 @@ class DashScopeChatOptionsTests {
         ToolCallback callback2 = Mockito.mock(ToolCallback.class);
 
         List<ToolCallback> callbacks = Arrays.asList(callback1, callback2);
-        Set<String> functions = new HashSet<>(Arrays.asList("test1", "test2"));
+        Map<String, Object> context = Map.of("tenant", "test");
 
         DashScopeChatOptions options = DashScopeChatOptions.builder()
                 .toolCallbacks(callbacks)
-                .toolNames(functions)
+                .toolContext(context)
                 .build();
 
         assertThat(options.getToolCallbacks()).containsExactlyElementsOf(callbacks);
-        assertThat(options.getToolNames()).containsExactlyInAnyOrderElementsOf(functions);
+        assertThat(options.getToolContext()).containsAllEntriesOf(context);
     }
 
     @Test
     void testToolsAndToolChoice() {
         // Test tools and tool choice related methods
-        DashScopeApiSpec.FunctionTool.Function function = new DashScopeApiSpec.FunctionTool.Function("Test function", "test", "{}");
-        DashScopeApiSpec.FunctionTool tool = new DashScopeApiSpec.FunctionTool(function);
-        List<DashScopeApiSpec.FunctionTool> tools = Collections.singletonList(tool);
+        Function function = new Function("test", "Test function", Map.of());
+        Tool tool = new Tool("function", function);
+        List<Tool> tools = List.of(tool);
         Map<String, String> toolChoice = Map.of("type", "function", "name", "test");
 
         DashScopeChatOptions options = DashScopeChatOptions.builder().tools(tools).toolChoice(toolChoice).build();
@@ -130,14 +152,14 @@ class DashScopeChatOptionsTests {
     @Test
     void testResponseFormat() {
         // Test response format related methods
-        DashScopeResponseFormat responseFormat = DashScopeResponseFormat.builder()
-                .type(DashScopeResponseFormat.Type.JSON_OBJECT)
+        ResponseFormat responseFormat = ResponseFormat.builder()
+                .type(Type.JSON_OBJECT)
                 .build();
 
         DashScopeChatOptions options = DashScopeChatOptions.builder().responseFormat(responseFormat).build();
 
         assertThat(options.getResponseFormat()).isEqualTo(responseFormat);
-        assertThat(options.getResponseFormat().getType()).isEqualTo(DashScopeResponseFormat.Type.JSON_OBJECT);
+        assertThat(options.getResponseFormat().getType()).isEqualTo(Type.JSON_OBJECT);
     }
 
     @Test
@@ -163,21 +185,18 @@ class DashScopeChatOptionsTests {
         DashScopeChatOptions options1 = DashScopeChatOptions.builder()
                 .model(TEST_MODEL)
                 .temperature(TEST_TEMPERATURE)
-                .extraBody(TEST_EXTRA_BODY)
                 .enableCodeInterpreter(true)
                 .build();
 
         DashScopeChatOptions options2 = DashScopeChatOptions.builder()
                 .model(TEST_MODEL)
                 .temperature(TEST_TEMPERATURE)
-                .extraBody(TEST_EXTRA_BODY)
                 .enableCodeInterpreter(true)
                 .build();
 
         DashScopeChatOptions options3 = DashScopeChatOptions.builder()
                 .model("different-model")
                 .temperature(0.5)
-                .extraBody(Map.of())
                 .enableCodeInterpreter(false)
                 .build();
 
